--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "description": "Simple form for user and Address storage",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "nodemon --experimental-json-module --exec babel-node index.js"
   },
   "author": "Archit Kandu",
   "license": "ISC",
   "bugs": {
     "url": "https://github.com/ArchitKandu/SmokesTree/issues"
   },
-  "homepage": "https://github.com/ArchitKandu/SmokesTree#readme"
+  "homepage": "https://github.com/ArchitKandu/SmokesTree#readme",
+  "dependencies": {
+    "express": "^4.21.0",
+    "nodemon": "^3.1.7"
+  },
+  "devDependencies": {
+    "@babel/cli": "^7.25.6",
+    "@babel/core": "^7.25.2",
+    "@babel/node": "^7.25.0",
+    "@babel/preset-env": "^7.25.4"
+  }
 }
