--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --experimental-json-module --exec babel-node index.js"
+    "start": "nodemon index.js"
   },
   "author": "Archit Kandu",
   "license": "ISC",
@@ -14,13 +14,10 @@
   },
   "homepage": "https://github.com/ArchitKandu/SmokesTree#readme",
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.21.0",
+    "express-async-handler": "^1.2.0",
+    "mongoose": "^8.7.0",
     "nodemon": "^3.1.7"
-  },
-  "devDependencies": {
-    "@babel/cli": "^7.25.6",
-    "@babel/core": "^7.25.2",
-    "@babel/node": "^7.25.0",
-    "@babel/preset-env": "^7.25.4"
   }
 }
